--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
       <h1>chatterbox</h1>
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
+
         Room:
-        <select></select>
+        <input> </input>
         <button>Add Room</button>
+
+        <h5>Select Room</h5>
+        <select></select>
+        
       </div>
+
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
         <input type="submit" name="submit" class="submit"/>
